--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-google-maps": "^9.4.5",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "sweetalert": "^2.1.0"
   },
