--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-swing": "0.0.9",
     "react-swipe-deck": "^0.1.17",
     "react-swipeable-cards": "^1.0.6",
     "sweetalert": "^2.1.0"
