--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "pretty-ms": "^4.0.0",
     "react": "^16.5.2",
+    "react-add-to-calendar": "^0.1.5",
     "react-calendar": "^2.17.5",
     "react-dom": "^16.5.2",
     "react-google-maps": "^9.4.5",
