--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
-  "name": "generic",
+  "name": "myapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "pretty-ms": "^4.0.0",
-    "react": "^16.5.2",
-    "react-add-to-calendar": "^0.1.5",
-    "react-calendar": "^2.17.5",
-    "react-dom": "^16.5.2",
-    "react-google-maps": "^9.4.5",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5",
-    "react-swing": "0.0.9",
-    "react-swipe-deck": "^0.1.17",
-    "react-swipeable-cards": "^1.0.6",
-    "sweetalert": "^2.1.0"
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-redux": "^5.1.0",
+    "react-scripts": "2.1.0",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   },
   "browserslist": [
     ">0.2%",
